# iykra-fontgen

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: __main__.py  local.py
app/helpers/: gcs.py
app/services/: ingest_google_font.py  transform_font.py
infra/: main.tf  pubsub.tf  run.tf  storage.tf  variables.tf
